Added project - simply version

--- a/index.html
+++ b/index.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <title>WarsawJS - workshop#1 advanced</title>
+
+    <link href="css/styles.css" rel="stylesheet">
+    <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
-    <script src="src/main.js"></script>
+
+<div id="gallery">
+    <header id="thumbs-gallery">
+        <img id="0" class="border-active" src="assets/photo0.jpg" alt="photo0">
+        <img id="1" src="assets/photo1.jpg" alt="photo1">
+        <img id="2" src="assets/photo2.jpg" alt="photo2">
+        <img id="3" src="assets/photo3.jpg" alt="photo3">
+        <img id="4" src="assets/photo4.jpg" alt="photo4">
+    </header>
+
+    <main id="current-photo-wrapper">
+        <img id="current-photo" src="">
+    </main>
+
+    <footer id="navigation">
+        <a href="#" id="previous-button">Poprzedni</a>
+        <a href="#" id="next-button">Następny</a>
+    </footer>
+</div>
+
 </body>
 </html>
