Added addClickedListener function

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <div id="gallery">
     <header id="thumbs-gallery">
-        <img id="0" class="border-active" src="assets/photo0.jpg" alt="photo0">
-        <img id="1" src="assets/photo1.jpg" alt="photo1">
-        <img id="2" src="assets/photo2.jpg" alt="photo2">
-        <img id="3" src="assets/photo3.jpg" alt="photo3">
-        <img id="4" src="assets/photo4.jpg" alt="photo4">
+        <img data-id="0" class="border-active" src="assets/photo0.jpg" alt="photo0">
+        <img data-id="1" src="assets/photo1.jpg" alt="photo1">
+        <img data-id="2" src="assets/photo2.jpg" alt="photo2">
+        <img data-id="3" src="assets/photo3.jpg" alt="photo3">
+        <img data-id="4" src="assets/photo4.jpg" alt="photo4">
     </header>
 
     <main id="current-photo-wrapper">
@@ -23,8 +23,8 @@
     </main>
 
     <footer id="navigation">
-        <a href="#" id="previous-button">Poprzedni</a>
-        <a href="#" id="next-button">Następny</a>
+        <a href="#" id="previous-button" data-direction="previous">Poprzedni</a>
+        <a href="#" id="next-button" data-direction="next">Następny</a>
     </footer>
 </div>
 
