--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>WarsawJS - workshop#1 advanced</title>
 
     <link href="css/styles.css" rel="stylesheet">
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="dist/main.bundle.js"></script>
 </head>
 <body>
 
